--- a/labs/lab2.ipynb
+++ b/labs/lab2.ipynb
@@ -16,14 +16,17 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import seaborn as sns\n",
     "import pandas as pd\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.calibration import LabelEncoder"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.calibration import LabelEncoder\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +195,7 @@
        "4  What is ADHD and what are the challenges that ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,14 +208,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "В данных после заполнения нет пропусков.\n"
+      "Столбцы с пропусками:\n",
+      "course_rating: 6\n",
+      "course_reviews_num: 6\n",
+      "course_students_enrolled: 41\n",
+      "course_description: 1\n"
      ]
     }
    ],
@@ -221,7 +228,7 @@
     "columns_with_missing_values = missing_values_per_column[missing_values_per_column > 0]\n",
     "\n",
     "if columns_with_missing_values.any():\n",
-    "  print(\"Столбцы с пропусками после заполнения:\")\n",
+    "  print(\"Столбцы с пропусками:\")\n",
     "  for col, missing_count in missing_values_per_column[missing_values_per_column > 0].items():\n",
     "    print(f\"{col}: {missing_count}\")\n",
     "else:\n",
@@ -237,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -496,14 +503,12 @@
        "4                       459            768              12                 954  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
     "# Инициализация StandardScaler\n",
     "scaler = StandardScaler()\n",
     "\n",
